objects/CIS_ISRComment__c.object
<CustomObject>
    <description>Comment on Intervention Service Request within CIS Program</description>
    <fields>
        <fullName>CIS_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIS_EUQueueEmail__c</fullName>
        <label>CIS EU Queue Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CIS_ISR__c</fullName>
        <label>ISR</label>
        <referenceTo>CIS_ISR__c</referenceTo>
        <relationshipLabel>ISR Comments</relationshipLabel>
        <relationshipName>ISR_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CIS_OEMQueueEmail__c</fullName>
        <label>CIS_OEM_Queue_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CIS_TeamToNotify__c</fullName>
        <label>Team to notify</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM Correspondent team</fullName>
                </value>
                <value>
                    <fullName>End User Correspondent team</fullName>
                </value>
                <value>
                    <fullName>CIS-Master</fullName>
                </value>
                <value>
                    <fullName>CS&amp;Q OEM</fullName>
                </value>
                <value>
                    <fullName>CS&amp;Q EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ISR Comment</label>
    <nameField>
        <displayFormat>ISRC-{0000000000}</displayFormat>
        <label>ISR Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISR Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>